@@ -287,6 +287,9 @@ C-API
 Library
 -------
 
+- Issue #7860: platform.uname now reports the correct 'machine' type
+  when Python is running in WOW64 mode on 64 bit Windows.
+
 - Issue #3890: Fix recv() and recv_into() on non-blocking SSL sockets.
 
 - Issue #4282: Fix the main function of the profile module for a non-ASCII
